FR colors update maize
maize done

--- a/modernmaize.html
+++ b/modernmaize.html
@@ -19,7 +19,7 @@
 <body>
 
   <center><h1 id="top">Color Guide - Maize</h1>
-    <p>Note: Iridescent/Shimmer, Harlequin/Jester change appearance per breed and pose!</p>
+    <p>Note: Iridescent/Shimmer, Harlequin/Jester, and Chrysocolla/Malachite all change appearance per breed and pose!</p>
   <center><b><p><a href="index.html">Main Page</a></p>
   <p><a href="#primsec">Modern Primary/Secondary</a></p>
   <p><a href="#tert">Modern Tertiary</a></p></b></center></div>
