FR colors update maize
maize done

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
  <td>
   <p><b>Ancient</b></p>
   <p>
-  <!--- <a href="ancientmaize.html">Maize</a><br>
-  <a href="ancientcream.html">Cream</a><br>
+  <a href="ancientmaize.html">Maize</a><br>
+  <!--- <a href="ancientcream.html">Cream</a><br>
   <a href="ancientantique.html">Antique</a><br>
   <a href="ancientwhite.html">White</a><br>
   <a href="ancientmoon.html">Moon</a><br>
