new colors, edits

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
   <p><b>Modern</b></p>
   <p>
   <a href="modernmaize.html">Maize</a><br>
-  <!---- <a href="moderncream.html">Cream</a><br>
+  <a href="moderncream.html">Cream</a><br>
   <a href="modernantique.html">Antique</a><br>
-  <a href="modernwhite.html">White</a><br>
+  <!---- <a href="modernwhite.html">White</a><br>
   <a href="modernmoon.html">Moon</a><br>
   <a href="modernice.html">Ice</a><br>
   <a href="modernorca.html">Orca</a><br>
@@ -229,9 +229,9 @@
   <p><b>Ancient</b></p>
   <p>
   <a href="ancientmaize.html">Maize</a><br>
-  <!--- <a href="ancientcream.html">Cream</a><br>
+  <a href="ancientcream.html">Cream</a><br>
   <a href="ancientantique.html">Antique</a><br>
-  <a href="ancientwhite.html">White</a><br>
+  <!---- <a href="ancientwhite.html">White</a><br>
   <a href="ancientmoon.html">Moon</a><br>
   <a href="ancientice.html">Ice</a><br>
   <a href="ancientorca.html">Orca</a><br>
